<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="country_code">1</string>
	<string name="sms_blacklist">SMS Blacklist</string>
	<string name="blocked_messages">Blocked messages</string>
	<string name="rules_list">Rules list</string>
	<string name="rules_empty">Rules list is empty</string>
	<string name="messages_empty">No message found</string>
	<string name="type_prompt">Rule Type</string>
	<string name="rule_hint_wildcard">Pattern \'?\' and \'*\' allowed</string>
	<string name="rule_hint_regexp">Advanced users only</string>
	<string name="edit_rule">Edit rule</string>
	<string name="create_rule">Create rule</string>
	<string name="enable_rules">Enable rules</string>
	<string name="disable_rules">Disable rules</string>
	<string name="mark_all_read">Mark all as read</string>
	<string name="clear_messages">Clear messages</string>
	<string name="open">Open</string>
	<string name="save">Save</string>
	<string name="mark_read">Mark as read</string>
	<string name="enable">Enable</string>
	<string name="disable">Disable</string>
	<string name="delete">Delete</string>
	<string name="cancel">Cancel</string>
	<string name="ok">OK</string>
	<string name="type_blocked_number">(Wildcard) Block messages matches this number</string>
	<string name="type_trusted_number">(Wildcard) Don\'t block messages match this number (Highest priority)</string>
	<string name="type_blocked_keyword">(Wildcard) Block message if content matches this keyword</string>
	<string name="type_only_trusted_number">(Wildcard) Block ALL messages NOT matches this number</string>
	<string name="type_blocked_number_regexp">(Regexp) Block messages matches this number</string>
	<string name="type_blocked_keyword_regexp">(Regexp) Block messages if content matches this keyword</string>
	<string name="syntax_error">Syntax error. Rule can\'t be saved.</string>
	<string name="invaild_value">Invalid value. Rule can\'t be saved.</string>
	<string name="delete_rule_confirm">Delete this rule?</string>
	<string name="delete_message_confirm">Delete this message?</string>
	<string name="clear_message_confirm">Delete ALL messages?</string>
	<string name="enable_rules_confirm">Enable ALL rules?</string>
	<string name="disable_rules_confirm">Disable ALL rules?</string>
</resources>
